# tpm

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  cli_validators.hpp  tpm.cpp
cmake/: Analyzers.cmake  EnableExtraCompilerWarnings.cmake  Findclangformat.cmake  Findclangtidy.cmake  Findcppcheck.cmake  Format.cmake  GenerateVersionHeader.cmake  GenerateVersionHeader.hpp.in  RequireOutOfSourceBuild.cmake  SetDefaultBuildType.cmake
docs/: gpu.md  materials.md  renderer.md
examples/: example1.cl  example_0.cl  scene0.xml
include/tpm/: glm_ops.hpp  host.hpp  image.hpp  linalg.hpp  logging.hpp  orchestrator.hpp  scene.hpp  spline.hpp  tpm.hpp
proto/: CMakeLists.txt  tpm.proto
src/: CMakeLists.txt  argparse.c  argparse.h  cpu.c  cpu.h  exit_code.hpp  gpu.cl  gpu.cpp  gpu.h  gpu.hpp  host.cpp  image.c  image.cpp  image.h  image.hpp  log.c  log.cpp  log.h  log.hpp  logging.cpp  main.c  main.cpp  orchestrator.cpp  palanteer.h  prof.hpp  render.c  render.cpp  render.h  render.hpp  scene.cpp  scene.hpp  sdf.cl  sdf.hpp  sdf.spirv  stb_image_write.h  sysinfo.c  sysinfo.cpp  sysinfo.h  sysinfo.hpp  tpm.cpp  (+1 more)
